prevent y overflow, change media width

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     justify-content:center;
     align-items:center;
     height: 100%;
+    overflow-y: hidden;
 }
 
 .attribution {
@@ -50,6 +51,8 @@ body {
     color: hsl(217, 19%, 35%);
     background-color: white;
     margin: 0 auto;
+    margin-left: 1rem;
+    margin-right: 1rem;
     display: flex;
     position: relative;
     border-radius: 12px;
@@ -80,7 +83,7 @@ body {
 
 .poster-details {
     font-size: var(--content-font-size);
-    width: 50%;
+    width: 60%;
 }
 
 .poster-name {
@@ -140,7 +143,7 @@ body {
     background-color: var(--share-icons-bubble);
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 701px) {
     .share-icons {
         right: -3rem;
         top: 8rem;
@@ -179,7 +182,7 @@ body {
     text-transform: uppercase;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 700px){
     .card {
         width: 22rem;
         height: 35rem;
